--- a/Home/templates/index.html
+++ b/Home/templates/index.html
@@ -4,23 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>首页</title>
+    <title>法律数据库</title>
     <link href={{url_for('static',filename='css/bootstrap.css')}} rel='stylesheet' type='text/css'/>
     <link href={{url_for('static',filename='css/style.css')}} rel='stylesheet' type='text/css'/>
     <link href={{url_for('static',filename='css/cust.css')}} rel='stylesheet' type='text/css'/>
-    <script src={{url_for('static',filename='js/jquery.min.js')}}></script>
+     <script src={{url_for('static',filename='js/jquery.min.js')}}></script>
     <script src={{url_for('static',filename='js/search.js')}}></script>
 
 </head>
 <body class="body-content">
         {% include 'head.html' %}
         {% include 'search.html' %}
-        <!-- {% include 'search_detail.html' %}
-        <div class="button-list" id="button_div">
-               
-        </div> -->
-        <div id="sub_content" ></div>
-
+         <div id="sub_content" ></div>
 </body>
 </html>
 
