--- a/Home/templates/search_detail.html
+++ b/Home/templates/search_detail.html
@@ -16,8 +16,8 @@
             </tr>
             <tr>
                 <td><span style="color:#727272;font-size:13px;"><span title=发文字号>中华人民共和国主席令第32号</span>&nbsp;&nbsp;/<span title=时效性>&nbsp;&nbsp;尚未生效</span>&nbsp;&nbsp;/<span title=发布日期>&nbsp;&nbsp;2019.08.26发布</span>&nbsp;&nbsp;/<span title=实施日期>&nbsp;&nbsp;2020.01.01实施</span>&nbsp;&nbsp;</span></td>
-                <td valign="top" style="text-align:right;white-space:nowrap;">
-                | <a onclick="javascript:show_abstract(&#39;tita_chl_335305_1_1&#39;,&#39;1&#39;)" title="点击查看更多" id="tita_chl_335305_1_1" href="javascript:void(0)" style="font-size:12px;color:#727272;">展开</a>
+                <td style="text-align:right;white-space:nowrap;">
+                | <a title="点击查看更多"  href="javascript:void(0)" style="font-size:12px;color:#727272;">展开</a>
                 </td>
             </tr>
         </table>
@@ -26,7 +26,7 @@
     </div>
 
 
-</div>
+</div
 
 
 
