--- a/Admin/templates/view_content.html
+++ b/Admin/templates/view_content.html
@@ -126,7 +126,7 @@
         
 </body>
 </html>
- <!-- <link href={{url_for('static',filename='css/bootstrap.css')}} rel='stylesheet' type='text/css'/> -->
+ <!-- <link href={{url_for('static',filename='css/bootstrap3.1.css')}} rel='stylesheet' type='text/css'/> -->
  
  
 
